--- a/i18n_nextjs_ts/package.json
+++ b/i18n_nextjs_ts/package.json
@@ -15,9 +15,12 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "i18next": "^22.4.10",
     "next": "13.1.6",
+    "next-export-i18n": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.1.5",
     "typescript": "4.9.5"
   }
 }
